--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,95 @@
 /**index.wxss**/
+/**iconfont 初始化**/
+@font-face {
+  font-family: 'iconfont';  /* project id 841172 */
+  src: url('//at.alicdn.com/t/font_841172_j7lr61wldhi.eot');
+  src: url('//at.alicdn.com/t/font_841172_j7lr61wldhi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_841172_j7lr61wldhi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_841172_j7lr61wldhi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_841172_j7lr61wldhi.svg#iconfont') format('svg');
+}
+
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:32px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+  color: #ffab00;
+}
+/**icon font 图标内容**/
+.icon-HR:before { 
+  content: "\eb2d";
+}
+.icon-Account:before { 
+  content: "\e61c";
+}
+.icon-Coop:before {
+  content: "\e67d"
+}
+.icon-Task:before {
+  content: "\e60a"
+}
+.icon-Assign:before {
+  content: "\e62c"
+}
+
+/**个人信息**/
 .header {
-  
+  background-color: #2B2A30;
+  height: 225rpx;
+  display: flex;
+  align-items: center;
+}
+.avatar {
+  width: 160rpx;
+  height: 160rpx;
+  margin-left: 16px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.intro {
+  margin-left: 24px;
+  color: white;
+  font-size: 36rpx;
+}
+
+/**功能列表**/
+.list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.list-item {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 32px;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  border-bottom: 2px solid #F7F7F7;
+}
+.list-item-textarea {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+.list-item-textarea text:first-child{
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #454649;
+}
+.list-item-textarea text:last-child {
+  font-size: 14px;
+  color: #c3c3c3;
+}
+
+/**footer**/
+.footer {
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  padding-top: 24rpx;
+  color: #c3c3c3;
 }
