--- a/pages/Login/Login.wxml
+++ b/pages/Login/Login.wxml
@@ -1,7 +1,8 @@
 <view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
     <view class="page__bd">
+        <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">请填写所有信息后继续</view>
         <view class="weui-flex">
-            <view class="weui-flex__item"><view class="placeholder">placeholder</view></view>
+            <view class="weui-flex__item"><view class="placeholder"></view></view>
         </view>
 
         <view class="weui-cells weui-cells_after-title">
@@ -10,7 +11,7 @@
                     <view class="weui-label">你的名字？</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" placeholder="请输入真实姓名"/>
+                    <input class="weui-input" placeholder="请输入真实姓名" bindinput="bindNameInput"/>
                 </view>
             </view>
             
@@ -33,7 +34,7 @@
                     <picker mode="selector" bindchange="bindUniversityChange" value="{{societyIndex}}" range="{{society}}" wx:if="{{isAuthed}}">
                         <view class="weui-select weui-select_in-select-after">{{society[societyIndex]}}</view>
                     </picker>
-                    <input class="weui-input" bindinput="bindKeyInput" placeholder="请输入您的社团" wx:else/>
+                    <input class="weui-input" bindinput="bindSociietyInput" placeholder="请输入您的社团" wx:else/>
                 </view>
             </view>
         </view>
