--- a/pages/Login/Login.wxss
+++ b/pages/Login/Login.wxss
@@ -1,7 +1,8 @@
 
 .placeholder{
-    background-color: #EBEBEB;
-    margin-bottom: 36px;
-    height: 200px;
+    background-image: url("http://placekitten.com/600/288");
+    background-size: cover;
+    margin-bottom: 72rpx;
+    height: 364rpx;
     color: #cfcfcf;
 }
