--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -37,14 +37,12 @@
 /**个人信息**/
 .header {
   background-color: #2B2A30;
-  height: 225rpx;
   display: flex;
   align-items: center;
 }
 .avatar {
   width: 160rpx;
   height: 160rpx;
-  margin-left: 16px;
   border-radius: 8px;
   overflow: hidden;
 }
@@ -53,43 +51,13 @@
   color: white;
   font-size: 36rpx;
 }
-
-/**功能列表**/
-.list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.list-item {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding-left: 32px;
-  padding-bottom: 12px;
-  padding-top: 12px;
-  border-bottom: 2px solid #F7F7F7;
-}
-.list-item-textarea {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-}
-.list-item-textarea text:first-child{
-  margin-bottom: 5px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #454649;
-}
-.list-item-textarea text:last-child {
-  font-size: 14px;
-  color: #c3c3c3;
+.weui-media-box:last-child:after {
+    border-bottom: 1rpx solid #000;
 }
 
 /**footer**/
 .footer {
-  display: flex;
-  justify-content: center;
-  font-size: 12px;
   padding-top: 24rpx;
+  padding-bottom: 24rpx;
   color: #c3c3c3;
 }
