--- a/components/Login_Header/Login_Header.wxss
+++ b/components/Login_Header/Login_Header.wxss
@@ -1,3 +1,4 @@
+/* pages/components/LoginHeader.wxss */
 .placeholder{
     background-image: url("http://placekitten.com/600/288");
     background-size: cover;
