--- a/pages/Login_success/Login_success.wxml
+++ b/pages/Login_success/Login_success.wxml
@@ -1,3 +1,4 @@
+<!--pages/components/Login_success.wxml-->
 <view class="page">
     <view class="weui-msg">
         <view class="weui-msg__icon-area">
