--- a/pages/Login/Login.wxml
+++ b/pages/Login/Login.wxml
@@ -1,6 +1,6 @@
 <view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
     <view class="page__bd">
         <Login-Header showTopTips="{{showTopTips}}"/>
-        <Login-List university="{{University}}"/>
+        <Login-List university="{{University}}" bind:CheckTips="ChangeTips"/>
     </view>
 </view>
